k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: 
    app: webapp

spec:
  replicas: 2
  selector:
    matchLabels: 
      app: webapp
  template:
    metadata:
      labels:
        app: webapp

    spec:
      containers:
      - name: webapp
        image: robinparker995/devops-project:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"  

        ports:
        - containerPort: 3000
