k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service

spec:
  type: ClusterIP

  selector:
    app: webapp
  
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
